--- a/Tareas/Tarea4/src/Makefile
+++ b/Tareas/Tarea4/src/Makefile
@@ -1,3 +1,3 @@
 tarea: main.cpp
-	g++ -o tryout.exe main.cpp Matriz.cpp Funciones.cpp
+	g++ -o tryout.exe main.cpp Matriz.cpp Funciones.cpp ValidadorDeEntrada.cpp
 	./tryout.exe
