Previo 10. Ajuste en nombre de carpeta BasicWindow
Signed-off-by: KristhelQuesada <kristhelquesada24@gmail.com>

--- a/Previos/Previo10/BasicWindow/Makefile
+++ b/Previos/Previo10/BasicWindow/Makefile
@@ -11,7 +11,7 @@ LDFLAGS = --libs
 SOURCES = MyApp.cpp MainFrame.cpp
 
 # Nombre del ejecutable
-EJECUTABLE = basicWindow.exe
+EJECUTABLE = try.exe
 
 # La regla predeterminada que se ejecuta cuando escribes 'make'
 all: $(EJECUTABLE)
